--- a/_includes/ossSchema.html
+++ b/_includes/ossSchema.html
@@ -1,49 +1,49 @@
 <ul class="list-unstyled">
     <li>
-        <details open> 
+        <details open>
             <summary>schemaVersion <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-            <h5>{{ site.SchemaVersionCode[page.lang] }}</h5>
+            <h5>{{ site.SchemaVersion[page.lang] }}</h5>
             <p>{{ site.SchemaVersionOssDesc[page.lang] }}</p>
-        </details> 
-        </li>  
+        </details>
+        </li>
     <li>
-        
-    <details open> 
+
+    <details open>
         <summary>description <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
         <h5>{{ site.DescriptionName[page.lang] }}</h5>
-        <p>{{ site.DescriptionCodeDesc[page.lang] }}</p>
+        <p>{{ site.DescriptionDesc[page.lang] }}</p>
         <ul>
-            <li>{{ site.DescriptionCodeEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
-            <li>{{ site.DescriptionCodeFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+            <li>{{ site.DescriptionEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+            <li>{{ site.DescriptionFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
         </ul>
     </details>
-    </li>  
+    </li>
 
     <li>
-    <details open> 
+    <details open>
         <summary>homepageURL <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
         <h5>{{ site.HomepageURLName[page.lang] }}</h5>
-        <p>{{ site.HomepageURLCodeDesc[page.lang] }}</p>
+        <p>{{ site.HomepageURLDesc[page.lang] }}</p>
         <ul>
-            <li>{{ site.HomepageURLCodeEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
-            <li>{{ site.HomepageURLCodeFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+            <li>{{ site.HomepageURLEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+            <li>{{ site.HomepageURLFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
         </ul>
     </details>
-    </li>  
+    </li>
 
     <li>
-    <details open> 
+    <details open>
         <summary>licenses <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
-        <p>{{ site.LicensesCodeDesc[page.lang] }}</p>
+        <p>{{ site.LicensesDesc[page.lang] }}</p>
         <ul class="list-unstyled">
             <li>
             <details open>
                 <summary>URL <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
                 <h5>{{ site.URLLicensesName[page.lang] }}</h5>
-                <p>{{ site.URLLicensesCodeDesc[page.lang] }}</p>
+                <p>{{ site.URLLicensesDesc[page.lang] }}</p>
                 <ul>
-                    <li>{{ site.URLLicensesCodeDescEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
-                    <li>{{ site.URLLicensesCodeDescFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                    <li>{{ site.URLLicensesDescEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                    <li>{{ site.URLLicensesDescFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
                 </ul>
             </details>
             </li>
@@ -51,7 +51,7 @@
             <details open>
                 <summary>spdxID <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
                 <h5>{{ site.SpdxIDLicencesName[page.lang] }}</h5>
-                <p>{{ site.SpdxIDLicencesCodeDesc[page.lang] }}</p>
+                <p>{{ site.SpdxIDLicencesDesc[page.lang] }}</p>
             </details>
             </li>
         </ul>
@@ -59,7 +59,7 @@
     </li>
 
     <li>
-    <details open> 
+    <details open>
         <summary>name <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
         <h5>{{ site.ProjectName[page.lang] }}</h5>
         <p>{{ site.NameCodeDesc[page.lang] }}</p>
@@ -71,29 +71,29 @@
     </li>
 
     <li>
-    <details open> 
+    <details open>
         <summary>tags <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
         <h5>{{ site.TagsName[page.lang] }}</h5>
-        <p>{{ site.TagsCodeDesc[page.lang] }}</p>
+        <p>{{ site.TagsDesc[page.lang] }}</p>
         <ul>
-            <li>{{ site.TagsCodeEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</li>
-            <li>{{ site.TagsCodeFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</li>
+            <li>{{ site.TagsEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</li>
+            <li>{{ site.TagsFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</li>
         </ul>
     </details>
     </li>
 
     <li>
-    <details open> 
+    <details open>
         <summary>administrations <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
         <p>site administrations descriptions</p>
         <ul class="list-unstyled">
             <li>
-            <details open> 
+            <details open>
                 <summary>adminCode <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
                 <h5>{{ site.AdminCode[page.lang] }}</h5>
                 <p>{{ site.AdminCodeDesc[page.lang] }}</p>
             </details>
-            </li>  
+            </li>
 
             <li>
             <details open>
@@ -103,31 +103,31 @@
                     <li>
                     <details open>
                         <summary>contact <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
-                        <p>{{ site.ContactCodeDesc[page.lang] }}</p>
+                        <p>{{ site.ContactDesc[page.lang] }}</p>
                         <ul class="list-unstyled">
                             <li>
                             <details open>
                                 <summary>email <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-                                <h5>{{ site.EmailContactCode[page.lang] }}</h5>
-                                <p>{{ site.EmailContactCodeDesc[page.lang] }}</p>
+                                <h5>{{ site.EmailContact[page.lang] }}</h5>
+                                <p>{{ site.EmailContactDesc[page.lang] }}</p>
                             </details>
                             </li>
                             <li>
                             <details open>
                                 <summary>URL [array]</summary>
                                 <h5>{{ site.URLContactName[page.lang] }}</h5>
-                                <p>{{ site.URLContactCodeDesc[page.lang] }}</p>
+                                <p>{{ site.URLContactDesc[page.lang] }}</p>
                                 <ul>
-                                    <li>{{ site.URLContactCodeEN[page.lang] }} [string]</li>
-                                    <li>{{ site.URLContactCodeFR[page.lang] }} [string]</li>
+                                    <li>{{ site.URLContactEN[page.lang] }} [string]</li>
+                                    <li>{{ site.URLContactFR[page.lang] }} [string]</li>
                                 </ul>
                             </details>
                             </li>
                             <li>
                             <details open>
                                 <summary>name [string]</summary>
-                                <h5>{{ site.NameContactCode[page.lang] }}</h5>
-                                <p>{{ site.NameContactCodeDesc[page.lang] }}</p>
+                                <h5>{{ site.NameContact[page.lang] }}</h5>
+                                <p>{{ site.NameContactDesc[page.lang] }}</p>
                             </details>
                             </li>
                         </ul>
@@ -135,22 +135,22 @@
                     </li>
 
                     <li>
-                    <details open> 
+                    <details open>
                         <summary>date <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
-                        <p>{{ site.DateCodeDesc[page.lang] }}</p>
+                        <p>{{ site.DateDesc[page.lang] }}</p>
                         <ul class="list-unstyled">
                             <li>
                             <details open>
                                 <summary>started <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-                                <h5>{{ site.CodeStarted[page.lang] }}</h5>
-                                <p>{{ site.StartedCodeDesc[page.lang] }}</p>
+                                <h5>{{ site.Started[page.lang] }}</h5>
+                                <p>{{ site.StartedDesc[page.lang] }}</p>
                             </details>
                             </li>
                             <li>
                             <details open>
                                 <summary>metadataLastUpdated <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-                                <h5>{{ site.LastUpdatedCode[page.lang] }}</h5>
-                                <p>{{ site.MetaDataLastUpdatedCodeDesc[page.lang] }}</p>
+                                <h5>{{ site.LastUpdated[page.lang] }}</h5>
+                                <p>{{ site.MetaDataLastUpdatedDesc[page.lang] }}</p>
                             </details>
                             </li>
                         </ul>
@@ -158,53 +158,53 @@
                     </li>
 
                     <li>
-                    <details open> 
+                    <details open>
                         <summary>name <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
                         <h5>{{ site.NameUsesOss[page.lang] }}</h5>
                         <p>{{ site.NameUsesOssDesc[page.lang] }}</p>
                         <ul>
-                            <li>{{ site.NameCodeEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
-                            <li>{{ site.NameCodeFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                            <li>{{ site.NameEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                            <li>{{ site.NameFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
                         </ul>
                     </details>
                     </li>
 
                     <li>
-                    <details open> 
+                    <details open>
                         <summary>description <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
                         <h5> {{ site.DescriptionUsesOss[page.lang] }} </h5>
                         <p>{{ site.DescriptionUsesOssDesc[page.lang] }}</p>
                         <ul>
-                            <li>{{ site.DescriptionCodeEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
-                            <li>{{ site.DescriptionCodeFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                            <li>{{ site.DescriptionEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                            <li>{{ site.DescriptionFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
                         </ul>
                     </details>
                     </li>
 
                     <li>
-                    <details open> 
+                    <details open>
                         <summary>relatedCode [array]</summary>
-                        <p>{{ site.RelatedCodeDesc[page.lang] }}</p>
+                        <p>{{ site.RelatedDesc[page.lang] }}</p>
                         <ul class="list-unstyled">
                             <li>
                             <details open>
                                 <summary>URL [array]</summary>
-                                <h5>{{ site.URLRelatedCodeName[page.lang] }}</h5>
-                                <p>{{ site.URLRelatedCodeDesc[page.lang] }}</p>
+                                <h5>{{ site.URLRelatedName[page.lang] }}</h5>
+                                <p>{{ site.URLRelatedDesc[page.lang] }}</p>
                                 <ul>
-                                    <li>{{ site.URLRelatedCodeEN[page.lang] }} [string]</li>
-                                    <li>{{ site.URLRelatedCodeFR[page.lang] }} [string]</li>
+                                    <li>{{ site.URLRelatedEN[page.lang] }} [string]</li>
+                                    <li>{{ site.URLRelatedFR[page.lang] }} [string]</li>
                                 </ul>
                             </details>
                             </li>
                             <li>
                             <details open>
                                 <summary>name [array]</summary>
-                                <h5>{{ site.RelatedCodeName[page.lang] }}</h5>
-                                <p>{{ site.NameRelatedCodeDesc[page.lang] }}</p>
+                                <h5>{{ site.RelatedName[page.lang] }}</h5>
+                                <p>{{ site.NameRelatedDesc[page.lang] }}</p>
                                 <ul>
-                                    <li>{{ site.NameRelatedCodeEN[page.lang] }} [string]</li>
-                                    <li>{{ site.NameRelatedCodeFR[page.lang] }} [string]</li>
+                                    <li>{{ site.NameRelatedEN[page.lang] }} [string]</li>
+                                    <li>{{ site.NameRelatedFR[page.lang] }} [string]</li>
                                 </ul>
                             </details>
                             </li>
@@ -213,7 +213,7 @@
                     </li>
 
                     <li>
-                    <details open> 
+                    <details open>
                         <summary>status [string]</summary>
                         <h5>{{ site.StatusName[page.lang] }}</h5>
                         <p>{{ site.StatusCodeDesc[page.lang] }}</p>
