Format and trailing whitespace

--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -20,9 +20,9 @@
 
   {% include form_projectName.html %}
 
-  {% include form_organizationCode.html %}
+  {% include form_organization.html %}
 
-  {% include form_partnersCode.html %}
+  {% include form_partners.html %}
 
   {% include form_licenses.html %}
 
