--- a/_includes/form_languages.html
+++ b/_includes/form_languages.html
@@ -1,4 +1,4 @@
-<h2>{{ site.LanguagesCodeDesc[page.lang] }}</h2>
+<h2>{{ site.LanguagesDesc[page.lang] }}</h2>
 <label>{{ site.LanguagesName[page.lang] }}</label>
 {% assign languages_array = "" | split: "," %}
 {% for fptms in site.data.code %}
