--- a/_includes/form_version.html
+++ b/_includes/form_version.html
@@ -1,4 +1,4 @@
-<h2>{{ site.VersionCodeDesc[page.lang] }}</h2>
+<h2>{{ site.VersionDesc[page.lang] }}</h2>
 <div class="form-group">
   <label for="versionProject">{{ site.VersionName[page.lang] }}</label>
   <input class="form-control" id="versionProject" name="versionProject" type="text" />
