--- a/_includes/softwareForm.html
+++ b/_includes/softwareForm.html
@@ -1,3 +1,29 @@
 <div class="wb-frmvld">
   <form action="#" method="get" id="validation">
   {% include form_schemaVersion.html %}
+
+  {% include form_description.html %}
+
+  {% include form_homepageURL.html %}
+
+  {% include form_licenses.html %}
+
+  {% include form_projectName.html %}
+
+  {% include form_tags.html %}
+
+  {% include form_adminCode.html %}
+
+  {% include form_contactDescription.html %}
+
+  {% include form_dateDescription.html created=true lastModified=false metadata=true %}
+
+  <!-- Use description -->
+
+  <!-- Use name -->
+
+  {% include form_relatedCode.html %}
+
+  {% include form_status.html %}
+
+  <!-- users -->
