--- a/_includes/form_downloadURL.html
+++ b/_includes/form_downloadURL.html
@@ -1,9 +1,9 @@
-<h2>{{ site.DownloadURLCodeDesc[page.lang] }}</h2>
+<h2>{{ site.DownloadURLDesc[page.lang] }}</h2>
 <div class="form-group">
-  <label for="enDownloadUrl">{{ site.DownloadURLCodeEN[page.lang] }}</label>
+  <label for="enDownloadUrl">{{ site.DownloadURLEN[page.lang] }}</label>
   <input class="form-control" id="enDownloadUrl" name="enDownloadUrl" type="url"/>
 </div>
 <div class="form-group">
-  <label for="frDownloadUrl">{{ site.DownloadURLCodeFR[page.lang] }}</label>
+  <label for="frDownloadUrl">{{ site.DownloadURLFR[page.lang] }}</label>
   <input class="form-control" id="frDownloadUrl" name="frDownloadUrl" type="url"/>
 </div>
