--- a/_includes/form_organization.html
+++ b/_includes/form_organization.html
@@ -1,9 +1,9 @@
-<h2>{{ site.OrganizationCodeDesc[page.lang] }}</h2>
+<h2>{{ site.OrganizationDesc[page.lang] }}</h2>
 <div class="form-group">
-  <label for="enOrganization">{{ site.OrganizationCodeEN[page.lang] }}</label>
+  <label for="enOrganization">{{ site.OrganizationEN[page.lang] }}</label>
   <input class="form-control" id="enOrganization" name="enOrganization" type="text" data-rule-alphanum-space-en-fr="true"/>
 </div>
 <div class="form-group">
-  <label for="frOrganization">{{ site.OrganizationCodeFR[page.lang] }}</label>
+  <label for="frOrganization">{{ site.OrganizationFR[page.lang] }}</label>
   <input class="form-control" id="frOrganization" name="frOrganization" type="text" data-rule-alphanum-space-en-fr="true"/>
 </div>
