--- a/_includes/form_repoURL.html
+++ b/_includes/form_repoURL.html
@@ -1,9 +1,9 @@
-<h2>{{ site.RepositoryURLCodeDesc[page.lang] }}</h2>
+<h2>{{ site.RepositoryURLDesc[page.lang] }}</h2>
 <div class="form-group">
-  <label for="enRepoUrl" class="required">{{ site.RepositoryURLCodeEN[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+  <label for="enRepoUrl" class="required">{{ site.RepositoryURLEN[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
   <input class="form-control" id="enRepoUrl" name="enRepoUrl" type="url" required="required"/>
 </div>
 <div class="form-group">
-  <label for="frRepoUrl" class="required">{{ site.RepositoryURLCodeFR[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+  <label for="frRepoUrl" class="required">{{ site.RepositoryURLFR[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
   <input class="form-control" id="frRepoUrl" name="frRepoUrl" type="url" required="required"/>
 </div>
