--- a/_includes/form_vcs.html
+++ b/_includes/form_vcs.html
@@ -1,4 +1,4 @@
-<h2>{{ site.VcsCodeDesc[page.lang] }}</h2>
+<h2>{{ site.VcsDesc[page.lang] }}</h2>
 <div class="form-group">
   <label for="vcs">{{ site.VcsName[page.lang] }}</label>
   <input class="form-control" id="vcs" name="vcs" type="text" data-rule-alphanum-space-en-fr="true" />
